fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -216,10 +216,16 @@ nav a{
     padding: 1.5rem 0;
 }
 
+.footer .left{
+    margin: 0;
+    padding: 0;
+}
+
 .footer .left h2{
     font-family: 'DM Sans', sans-serif;
     font-size: 1rem;
     color: var(--text-primary);
+    margin-bottom: 1rem;
 }
 
 .footer .left p{
@@ -227,10 +233,10 @@ nav a{
     font-size: 0.875rem;
     color: var(--text-secondary);
     margin-top: 0.5rem;
+    margin-bottom: 0px;
 }
 
 .footer .right .container{
-    width: max-content;
     display: flex;
     align-items: center;
     gap: 1.5rem;
